# UltraJarvis_v8

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  MANIFEST.in  QUEUE  README.md  cloud_bridge.py  env  jarvis.py  pyproject.toml  pytest.ini  registry.py  requirements.txt  tasks.txt  uc.py
.github/workflows/: ci.yml
advisors/: health_advisor.py  phase_advisor.py  track_loader.py
core/: __init__.py  cache.py  cloud_bridge.py  job_worker.backup.py  job_worker.py  logger.py  natural_tasks.py  persistence.py  prompts.py  quality.py  repo_index.py  runtime.py  watchdog.py
data/: health_state.json  memory.db  memory.json  memory_runtime.json  phase.json
docs/: CONSTITUTION.md  ENQUEUE_OK.md
fresh_test/: pyvenv.cfg
memory/: lru.py  persistence.py
project/: roadmap.md
runtime/: loggingx.py  metrics.py
tests/: test_cli_help.py  test_cli_metrics.py  test_devin_patch_wrap.py  test_logger.py  test_natural_tasks.py  test_performance.py  test_repo_index.py  test_runtime.py  test_tools_sanity.py  test_verify.py  test_worker_smoke.py  test_zip_output.py
tools/: automation.py  browser.py  devin_agent.py  email.py  files.py  os_control.py  roadmap.py  speech.py  websearch.py
ultra_jarvis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
workspace/: done.jsonl  queue.jsonl
workspace/jobs/job_323ea0/: spec.json  tool.py
workspace/jobs/job_409c1f/: spec.json  tool.py
workspace/jobs/job_5fcecd/: spec.json  tool.py
workspace/jobs/job_8632c2/: spec.json  tool.py
workspace/jobs/job_9fd37b/: spec.json  tool.py
(+84 files in other folders)
